--- a/.github/workflows/blog-posts.yml
+++ b/.github/workflows/blog-posts.yml
@@ -13,6 +13,11 @@ jobs:
         uses: ErrorGamer2000/github-readme-blog-post-action@v1
         with:
           feed_urls: https://www.xomia.com/blog?format=rss
+          show_post_count: false
+          show_post_date: false
+          show_last_updated_date: false
+          show_read_more: false
+        
       - name: Commit changed files
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
