--- a/.github/workflows/blog-posts.yml
+++ b/.github/workflows/blog-posts.yml
@@ -17,6 +17,7 @@ jobs:
           show_post_date: false
           show_last_updated_date: false
           show_read_more: false
+          show_feed_title: false
         
       - name: Commit changed files
         uses: stefanzweifel/git-auto-commit-action@v4
